syntax = "proto3";

message Empty {}

service MeasurementApi {
    rpc StartMeasurement (Meta) returns (StartMeasurementResponse) {}
    rpc StopMeasurement (MeasurementId) returns (Empty) {}
    rpc StartStage(MeasurementId) returns (Empty) {}
    rpc StopStage(MeasurementId) returns (Empty) {}
}

message StartMeasurementResponse {
    MeasurementId MeasurementId = 1;
}

message Meta {
    string Description = 1;
    string Host = 2;
}

message MeasurementId {
    string Id = 1;
}

service CtApi {
    rpc StoreLogEntries (LogEntry) returns (Empty) {}
}

message LogEntry {
    bytes Certificate = 1; // ASN DER
    int64 Index = 2;
    int64 Timestamp = 3; // unix time in ms
    Log Log = 4;
}

message Log { // as provided by https://www.certificate-transparency.org/known-logs
    string Description = 1;
    string Key = 2;
    string Url = 3;
    int64 MaximumMergeDelay = 4;
    repeated int64 OperatedBy = 5;
    string DnsApiEndpoint = 6;
}

service ZoneFileApi {
    rpc StoreZoneEntry(stream ZoneEntry) returns (stream Result) {}
}

message ZoneEntry {
    string Apex = 1;
    int64 Timestamp = 2;
}

message Result {
    bool Ok = 1;
    string Error = 2;
}